Modifiações no design